<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpoCalc</string>
    <string name="action_settings">Settings</string>
    <string name="etiqueta_K">Cuerpo:</string>
    <string name="etiqueta_base">Base:</string>
    <string name="etiqueta_exponente">Exponente:</string>
    <string name="button_result">CALCULAR</string>
    <string name="result">Resultado</string>

</resources>
